@@ -30,6 +30,7 @@
     "PDF::Annot::FileAttachment" : "lib/PDF/Annot/FileAttachment.pm",
     "PDF::Annot::Link" : "lib/PDF/Annot/Link.pm",
     "PDF::Annot::Markup" : "lib/PDF/Annot/Markup.pm",
+    "PDF::Annot::Movie" : "lib/PDF/Annot/Movie.pm",
     "PDF::Annot::Popup" : "lib/PDF/Annot/Popup.pm",
     "PDF::Annot::Square" : "lib/PDF/Annot/Square.pm",
     "PDF::Annot::Text" : "lib/PDF/Annot/Text.pm",
@@ -58,6 +59,7 @@
     "PDF::ColorSpace::Separation" : "lib/PDF/ColorSpace/Separation.pm",
     "PDF::Destination" : "lib/PDF/Destination.pm",
     "PDF::Encoding" : "lib/PDF/Encoding.pm",
+    "PDF::ExData::Markup3D" : "lib/PDF/ExData/Markup3D.pm",
     "PDF::ExtGState" : "lib/PDF/ExtGState.pm",
     "PDF::Field" : "lib/PDF/Field.pm",
     "PDF::Field::Button" : "lib/PDF/Field/Button.pm",
@@ -89,11 +91,12 @@
     "PDF::Image" : "lib/PDF/Image.pm",
     "PDF::Info" : "lib/PDF/Info.pm",
     "PDF::MCR" : "lib/PDF/MCR.pm",
-    "PDF::ExData::Markup3D" : "lib/PDF/ExData/Markup3D.pm",
     "PDF::Mask" : "lib/PDF/Mask.pm",
     "PDF::Mask::Alpha" : "lib/PDF/Mask/Alpha.pm",
     "PDF::Mask::Luminosity" : "lib/PDF/Mask/Luminosity.pm",
     "PDF::Metadata::XML" : "lib/PDF/Metadata/XML.pm",
+    "PDF::Movie" : "lib/PDF/Movie.pm",
+    "PDF::MovieActivation" : "lib/PDF/MovieActivation.pm",
     "PDF::NameTree" : "lib/PDF/NameTree.pm",
     "PDF::NumberTree" : "lib/PDF/NumberTree.pm",
     "PDF::OBJR" : "lib/PDF/OBJR.pm",
