@@ -2,6 +2,7 @@ Release 0.3.1
 - Fix StructElem coercement (broken in 0.3.0)
 - Fix PDF::Field .type() method to return 'Field', for
   consistancy, and .subtype() to return the field type.
+- Added PDF::Movie, PDF::MovieActivation and PDF::Annot::Movie
 Release 0.3.0
 - Fixed pdf-toc.p6
 - Feedback from trial integration PDF::ISO_32000 package
